fixed conflicting keybinds for spotify and teh new music recognition feature

--- a/.config/hypr/source/keybinds.conf
+++ b/.config/hypr/source/keybinds.conf
@@ -339,7 +339,7 @@ bindd = $mainMod, Z, Toggle Scratchpad, togglespecialworkspace, magic
 bindd = $mainMod SHIFT, Z, Move to Scratchpad, movetoworkspace, special:magic
 
 # Special Workspace for Spotify
-bind = $mainMod ALT, M, exec, uwsm-app -- $scripts/spotify/spotify_toggle.sh
+bind = $mainMod SHIFT, M, exec, uwsm-app -- $scripts/spotify/spotify_toggle.sh
 
 # -------------------------------------------------------------------------------------------------
 # 6. MOUSE BINDINGS
