--- a/.config/matugen/config.toml
+++ b/.config/matugen/config.toml
@@ -48,7 +48,7 @@ input_path  = '~/.config/matugen/templates/colors.css'
 output_path = '~/.config/matugen/generated/waybar-colors.css'
 post_hook   = '''
 ~/user_scripts/waybar/waybar_autostart.sh || true;
-notify-send "Theme Updated"
+notify-send -i applications-graphics-symbolic "Theme Updated"
 '''
 
 [templates.swaync]
