--- a/.config/hypr/source/window_rules.conf
+++ b/.config/hypr/source/window_rules.conf
@@ -947,8 +947,8 @@ windowrule {
 
 #--- waybar config swap---
 windowrule {
-    name = waybar_swap_config
-    match:class = ^(waybar_swap_config.sh)$
+    name = dusky_waybars.sh
+    match:class = ^(dusky_waybars.sh)$
     float = on
     size = 750 382
     center = on
