--- a/.local/share/applications/dusky_waybars.desktop
+++ b/.local/share/applications/dusky_waybars.desktop
@@ -1,11 +1,11 @@
 [Desktop Entry]
 Type=Application
-Name=Waybar Swap
+Name=Dusky Waybar Swap
 GenericName=Bar Config Switcher
 Comment=Toggle between Waybar configurations
-Exec=uwsm-app -- kitty --class waybar_swap_config.sh -e /home/dusk/user_scripts/waybar/waybar_swap_config.sh
+Exec=uwsm-app -- kitty --class dusky_waybars.sh -e /home/dusk/user_scripts/waybar/dusky_waybars.sh
 Terminal=false
 Categories=Settings;DesktopSettings;
-Keywords=waybar;panel;bar;toggle;switch;
+Keywords=dusky;waybar;panel;bar;toggle;switch;
 Icon=image-x-generic
 StartupNotify=true
