--- a/.config/hypr/source/window_rules.conf
+++ b/.config/hypr/source/window_rules.conf
@@ -900,10 +900,10 @@ windowrule {
     move = (monitor_w*0.038) (monitor_h*0.5 - window_h*0.5)
 }
 
-#--- toggle services script---
+#--- dusky_service_toggle.sh script---
 windowrule {
-    name = service_toggle.sh
-    match:class = ^(service_toggle.sh)$
+    name = dusky_service_toggle.sh
+    match:class = ^(dusky_service_toggle.sh)$
     float = on
     size = 833 358
     center = on
