--- a/.config/hypr/source/window_rules.conf
+++ b/.config/hypr/source/window_rules.conf
@@ -556,10 +556,19 @@ windowrule {
     center = on
 }
 
+#--- Git_config ---
+windowrule {
+    name = 300_git_config.sh
+    match:class = ^(300_git_config.sh)$
+    float = on
+    size = 726 389
+    center = on
+}
+
 #--- New_github_repo ---
 windowrule {
-    name = new_github_repo
-    match:class = ^(new_github_repo_to_backup.sh)$
+    name = 305_new_github_repo_to_backup.sh
+    match:class = ^(305_new_github_repo_to_backup.sh)$
     float = on
     size = 726 689
     center = on
@@ -567,8 +576,8 @@ windowrule {
 
 #--- relink_github_repo ---
 windowrule {
-    name = relink_github_repo 
-    match:class = ^(reconnect_and_push_new_changes_to_github.sh)$
+    name = 310_reconnect_and_push_new_changes_to_github.sh
+    match:class = ^(310_reconnect_and_push_new_changes_to_github.sh)$
     float = on
     size = 726 689
     center = on
@@ -597,6 +606,15 @@ windowrule {
 windowrule {
     name = asusctl.sh
     match:class = ^(asusctl.sh)$
+    float = on
+    size = 730 454
+    center = on
+}
+
+#--- autologin script ---
+windowrule {
+    name = 285_tty_autologin.sh
+    match:class = ^(285_tty_autologin.sh)$
     float = on
     size = 730 454
     center = on
