fixed all waybar's link for dusky hypridle

--- a/.config/waybar/06_horizontal_nerdy_modern/config.jsonc
+++ b/.config/waybar/06_horizontal_nerdy_modern/config.jsonc
@@ -317,7 +317,7 @@
             "critical": 15
         },
         "tooltip-format": "{timeTo}\nHealth: {health}%\nPower Draw: {power:.2f} W\nCycles: {cycles}\n\nLMB: Toggle Format\nRMB: Timeout Settings",
-        "on-click-right": "uwsm-app -- kitty --class timeout.sh -e $HOME/user_scripts/hypridle/timeout.sh"
+        "on-click-right": "uwsm-app -- kitty --class dusky_hypridle.sh -e $HOME/user_scripts/hypridle/dusky_hypridle.sh"
     },
 
     // ===================================================================
