--- a/.config/waybar/10_vertical_nerdy_compact/config.jsonc
+++ b/.config/waybar/10_vertical_nerdy_compact/config.jsonc
@@ -71,7 +71,7 @@
         },
         "tooltip-format": "{timeTo}\nHealth 󱟦 {health}%\nPower Draw {power:.2f} W",
         "on-click": "uwsm-app -- kitty --class power_saver.sh --hold -e \"$HOME/user_scripts/battery/power_saving/power_saver.sh\"",
-        "on-click-right": "uwsm-app -- kitty --class timeout.sh -e \"$HOME/user_scripts/hypridle/timeout.sh\""
+        "on-click-right": "uwsm-app -- kitty --class dusky_hypridle.sh -e \"$HOME/user_scripts/hypridle/dusky_hypridle.sh\""
     },
 
     "pulseaudio":{
