windowrule for dusky isntaller

--- a/.config/hypr/source/window_rules.conf
+++ b/.config/hypr/source/window_rules.conf
@@ -620,6 +620,14 @@ windowrule {
     center = on
 }
 
+# --- Dusky optional pacakges---
+windowrule {
+    name = 090_paru_packages_optionalsh
+    match:class = ^(090_paru_packages_optional\.sh)$
+    float = on
+    size = 831 572
+}
+
 #--- autologin script ---
 windowrule {
     name = 285_tty_autologin.sh
