--- a/user_scripts/dusky_system/control_center/dusky_config.yaml
+++ b/user_scripts/dusky_system/control_center/dusky_config.yaml
@@ -1963,6 +1963,24 @@ pages:
                 type: exec
                 command: kitty --class dusky_wayclick.sh --hold sh -c "$HOME/user_scripts/wayclick/dusky_wayclick.sh --setup"
                 terminal: false
+            - type: button
+              properties:
+                title: "Step 3: Configuration"
+                description: Manage Wayclick sounds and logic
+                icon: preferences-desktop-keyboard-shortcuts-symbolic
+                buttons:
+                  - icon: text-x-script-symbolic
+                    button_text: "File"
+                    on_press:
+                      type: exec
+                      command: gnome-text-editor "$HOME/user_scripts/wayclick/dusky_wayclick.sh"
+                  - icon: input-keyboard-symbolic
+                    button_text: "TUI"
+                    style: suggested
+                    on_press:
+                      type: exec
+                      command: kitty --class dusky_tui_wayclick.sh --hold sh -c "$HOME/user_scripts/wayclick/dusky_tui_wayclick.sh"
+                      terminal: false
 
   - type: section
     properties:
