--- a/user_scripts/dusky_system/control_center/dusky_config.yaml
+++ b/user_scripts/dusky_system/control_center/dusky_config.yaml
@@ -228,7 +228,7 @@ pages:
         title: TTY Auto Login
         description: Automatically login to TTY1 on boot
         icon: avatar-default-symbolic
-        key_file: ~/.config/dusky/settings/auto_login_tty
+        key: auto_login_tty
       on_toggle:
         enabled:
           type: exec
