--- a/.config/waybar/15_mechabar/config.jsonc
+++ b/.config/waybar/15_mechabar/config.jsonc
@@ -154,8 +154,8 @@
 
 	"custom/distro": {
 		"format": "󰣇",
-		"on-click": "rofi -show drun",
-		"tooltip-format": "Application Launcher"
+		"on-click": "python3 /home/ubaid/user_scripts/dusky_system/control_center/dusky_control_center.py",
+		"tooltip-format": "Control Center"
 	},
 
 	"idle_inhibitor": {
