--- a/.config/hypr/source/keybinds.conf
+++ b/.config/hypr/source/keybinds.conf
@@ -45,7 +45,8 @@ bindd = CTRL SHIFT, SPACE, Show Keybinds, exec, uwsm-app -- pkill rofi; $scripts
 bindd = $mainMod CTRL, SPACE, Search Emojis, exec, uwsm-app -- pkill rofi; $scripts/rofi/emoji.sh
 bindd = $mainMod CTRL SHIFT, SPACE, Calculator, exec, uwsm-app -- pkill rofi; $scripts/rofi/calculator.sh
 bindd = $mainMod SHIFT, SPACE, Matugen Theme Config, exec, uwsm-app -- pkill rofi; $scripts/rofi/rofi_theme.sh
-bindd = CTRL, SPACE, Rofi Wallpaper Selector, exec, uwsm-app -- pkill rofi; $scripts/rofi/rofi_wallpaper_selctor.sh
+# bindd = CTRL, SPACE, Rofi Wallpaper Selector, exec, uwsm-app -- pkill rofi; $scripts/rofi/rofi_wallpaper_selctor.sh
+bindd = CTRL, SPACE, Waypaper Wallpaper Selector, exec, uwsm-app -- waypaper
 bindd = $mainMod, SPACE, System Menu, exec, gdbus call --session --dest com.github.dusky.controlcenter --object-path /com/github/dusky/controlcenter --method org.freedesktop.Application.Activate "{}"
 bindd = CTRL ALT, SPACE, UWSM uuctl - display active user units, exec, uwsm-app -- pkill rofi; uuctl
 
