--- a/.local/share/applications/file_switcher.desktop
+++ b/.local/share/applications/file_switcher.desktop
@@ -1,11 +1,11 @@
 [Desktop Entry]
 Type=Application
 Name=File Manager Switcher
-GenericName=Yazi and Thunar
+GenericName=TUI / GUI
 Comment=Switch between file managers
 Exec=uwsm-app -- kitty --hold --class 235_file_manager_switch.sh -e /home/dusk/user_scripts/arch_setup_scripts/scripts/235_file_manager_switch.sh
 Terminal=false
 Categories=System;Utility;FileTools;
-Keywords=file;manager;switch;change;
+Keywords=dusky;yazi;nemo;thunar;nautilus;dolphin;file;manager;switch;change;
 Icon=system-file-manager
 StartupNotify=true
