--- a/.config/waybar/15_mechabar/config.jsonc
+++ b/.config/waybar/15_mechabar/config.jsonc
@@ -147,7 +147,7 @@
 
 	"custom/distro": {
 		"format": "󰣇",
-		"on-click": "gdbus call --session --dest com.github.dusky.controlcenter --object-path /com/github/dusky/controlcenter --method org.freedesktop.Application.Activate "{}"",
+		"on-click": "gdbus call --session --dest com.github.dusky.controlcenter --object-path /com/github/dusky/controlcenter --method org.freedesktop.Application.Activate '{}'",
 		"tooltip-format": "Control Center"
 	},
 
