--- a/.config/hypr/source/keybinds.conf
+++ b/.config/hypr/source/keybinds.conf
@@ -181,7 +181,7 @@ bindd = $mainMod ALT, A, Hyprland Animation Rofi Menu, exec, uwsm-app -- pkill r
 # --- Clipboard & Screenshot ---
 # --terminal based clipboard manager --
 
-# bindd = $mainMod, V, Clipboard History, exec, ~/user_scripts/clipboard/close_terminal_clipboard.sh uwsm-app -- $terminal --class terminal_clipboard.sh -e "~/user_scripts/clipboard/terminal_clipboard.sh"
+# bindd = $mainMod, V, Clipboard History, exec, ~/user_scripts/clipboard/close_terminal_clipboard.sh uwsm-app -- $terminal --class terminal_clipboard.sh -e ~/user_scripts/clipboard/terminal_clipboard.sh
 
 # OR
 
@@ -420,8 +420,8 @@ bindld = ALT, P, Mute Audio, exec, $osdclient --output-volume mute-toggle
 bindld = ALT, M, Mono Audio Toggle, exec, ~/user_scripts/audio/mono_audio_pipewire.sh
 
 # Audio/Mic Switching
-bindld = ALT, O, Switch Audio Output, exec, uwsm-app -- "~/user_scripts/audio/audio_switch.sh"
-bindld = ALT, I, Switch Mic Input, exec, uwsm-app -- "~/user_scripts/audio/mic_switch.sh"
+bindld = ALT, O, Switch Audio Output, exec, uwsm-app -- ~/user_scripts/audio/audio_switch.sh
+bindld = ALT, I, Switch Mic Input, exec, uwsm-app -- ~/user_scripts/audio/mic_switch.sh
 
 # Calculator
 bindd = , XF86Calculator, Calculator, exec, uwsm-app -- gnome-calculator
