support for hyprland 54

--- a/.config/hypr/source/keybinds.conf
+++ b/.config/hypr/source/keybinds.conf
@@ -250,7 +250,7 @@ bindd = $mainMod, C, Close Window, killactive,
 bindd = $mainMod, A, Window Fullscreen, fullscreen, 0
 bindd = $mainMod SHIFT, A, Window Maximize, fullscreen, 1
 bindd = $mainMod, X, Pin Window, pin
-bindd = $mainMod, Y, Toggle Split, togglesplit,
+bindd = $mainMod, Y, Toggle Window Split, layoutmsg, togglesplit
 bindd = $mainMod SHIFT, D, Toggle Pseudo, pseudo,
 
 # Smart Float: Toggle float -> Resize to 90% -> Center
