Added Scroll for workspace switching.

--- a/.config/waybar/14_horizontal_float/config.jsonc
+++ b/.config/waybar/14_horizontal_float/config.jsonc
@@ -38,8 +38,10 @@
             "active": "󰮯",
             "default": "󰊠",
             "persistent": "󰊠"
-        }
-    },
+        },
+	"on-scroll-up": "hyprctl dispatch workspace e-1",
+    "on-scroll-down": "hyprctl dispatch workspace e+1"
+  },
     
     "mpris": {
       "format": "{player_icon} {title}",
